pipeline/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: thinkdemoappwar
  name: thinkdemoappwar
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: thinkdemoappwar
    weight: 100
